system_tests/syntax_error/syntax_error.rlog
PMD (4): предупреждение: Преобразование 'real' в 'integer', возможна потеря данных
PMD (4): предупреждение: Преобразование 'real' в 'integer', возможна потеря данных
PMD (5): предупреждение: Преобразование 'real' в 'integer', возможна потеря данных
PMD (5): предупреждение: Преобразование 'real' в 'integer', возможна потеря данных
PMD (6): ошибка: Ожидается ключевое слово $End